cleaning up deprecated usage